unpackaged/main/default/objects/Pricing_Assignment_Visibility__c/Pricing_Assignment_Visibility__c.object-meta.xml
<CustomObject>
    <description>This Object controls the visibility of Price Lists and Family Tree Discount records on the Accounts &quot;Pricing Assignment&quot; flow component. Each record makes one Price List or Family Tree Discount record visible for a single Profile.</description>
    <label>Pricing Assignment Visibility</label>
    <nameField>
        <displayFormat>PAV-{00000}</displayFormat>
        <label>Pricing Assignment Visibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Assignment Visibility</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>