unpackaged/main/default/objects/Pricing_Assignment_Visibility__c/fields/Family_Tree_Discount__c.field-meta.xml
<CustomField>
    <fullName>Family_Tree_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Tree Discount</label>
    <referenceTo>Family_Tree_Discount__c</referenceTo>
    <relationshipLabel>Pricing Assignment Viisbility</relationshipLabel>
    <relationshipName>Pricing_Assignment_Viisbility</relationshipName>
    <type>Lookup</type>
</CustomField>