unpackaged/main/default/objects/Pricing_Assignment_Visibility__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price list considered for visibility</description>
    <label>Price List</label>
    <referenceTo>Price_List__c</referenceTo>
    <relationshipName>Price_List_Viisbility</relationshipName>
    <type>Lookup</type>
</CustomField>