unpackaged/main/default/objects/Pricing_Assignment_Visibility__c/fields/Price_List_Definition__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Setting visbility based on the definition of the pice list</description>
    <label>Price List Definition</label>
    <referenceTo>Price_List_Definition__c</referenceTo>
    <relationshipLabel>Pricing Assignment Visibility</relationshipLabel>
    <relationshipName>Pricing_Assignment_Visbility</relationshipName>
    <type>Lookup</type>
</CustomField>