unpackaged/main/default/objects/Pricing_Assignment_Visibility__c/fields/Price_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Name__c</fullName>
    <formula>Price_List_Definition__r.Price_List_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List Name</label>
    <type>Text</type>
</CustomField>