unpackaged/main/default/objects/Pricing_Assignment_Visibility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Price_List_Definition__c</columns>
    <columns>NAME</columns>
    <columns>Family_Tree_Discount__c</columns>
    <columns>Profile__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>