unpackaged/main/default/objects/Pricing_Assignment_Visibility__c/listViews/Profile_View.listView-meta.xml
<ListView>
    <fullName>Profile_View</fullName>
    <columns>NAME</columns>
    <columns>Profile__c</columns>
    <columns>Country__c</columns>
    <columns>Family_Tree_Discount__c</columns>
    <columns>Price_List_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_List_Name__c</field>
        <operation>contains</operation>
        <value>Landscape</value>
    </filters>
    <label>Profile View</label>
</ListView>